--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,18 @@ jobs:
       - name: Checkout Código
         uses: actions/checkout@v4
 
+      - name: Instalar Dependências LaTeX
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y texlive-latex-extra texlive-fonts-recommended texlive-lang-portuguese
+
       - name: Compilar LaTeX
         uses: xu-cheng/latex-action@v3
         with:
-          root_file: src/livro.tex # Caminho para o teu ficheiro
+          root_file: src/livro.tex
+          args: "-pdf -interaction=nonstopmode -halt-on-error"
 
-      - name: Publicar PDF como Artefacto
+      - name: Upload PDF
         uses: actions/upload-artifact@v4
         with:
           name: Engenharia-de-Prompts-PDF
